web.yaml
apiVersion: v1
kind: Service
metadata:
  name: matterchat-web-svc
  namespace: matterchat
  labels:
    app: matterchat-web
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: matterchat-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matterchat-web
  namespace: matterchat
  labels:
    app: matterchat-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: matterchat-web
  template:
    metadata:
      labels:
        app: matterchat-web
    spec:
      serviceAccountName: matterchat-app-sa
      containers:
        - name: web
          image: registry.cloud.martinpetr.dev/matterchat/web:sha-a19cfc4
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
